--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h3{
     margin: 20px;
 }
 .div1 img{
-    height: 500px;
+    height: fit-content;
     border-radius: 40px;
 }
 .div2{
@@ -60,6 +60,6 @@ h3{
     margin: 20px;
 }
 .div2 img{
-    height: 500px;
+    height: fit-content;
     border-radius: 40px;
 }
